static/css/style.css
/* Colours from colormind.io */
/* Google Fonts via Fontjoy.com */
:root {
    --primary:#a61b0b;
    --light-accent:#77a60b;
    --dark-accent: #0b39a6;
    --light-shade:#ede3dd;
    --dark-shade: #1a1419;
    --heading-font: "Almendra", serif;
    --title-font:"Courgette", cursive;
    --copy-font:"Shanti", serif;
}

/* reset CSS margins */
* {
    margin:0;
    padding:0;
}
body {
    background-color: var(--light-accent);
    color:var(--dark-shade);
    font-family: var(--copy-font);
    font-weight: 400;
    font-style: normal;
}
/* give the headings the same class so we can use style
 whilst keeping the headings in order h1->h2->h3 etc */
h1, .h1 {
    font-family: var(--heading-font);
    color: var(--primary);
}
h2, .h2 {
    font-family: var(--title-font);
}
.container {
    background-color: var(--light-shade);
}
/* give the FA-icons some breathing space */
footer i {
    padding: 0 3px;
}

/* -- classes -- */
/* button styles */
.btn {
    padding: 0.3em 1.5em;
}
.btn-primary {
    background-color: var(--dark-accent);
    color: var(--light-shade);
}
.btn-primary:hover {
    background-color: var(--dark-shade);
    color: var(--light-shade);
}
/* navigation links */
.nav {
    border:var(--light-accent) solid 2px;
    border-radius:3px;
    box-shadow: 0 2px 3px var(--primary);
}
.nav-link {
    background-color: var(--dark-accent);
    color: var(--light-shade);
    box-shadow: var(--primary) 0 2px 2px;
    border-radius: 5px;
}
.nav-link.active {
    box-shadow: var(--light-accent) 0 2px 2px;
}
.nav-link:hover {
    color: var(--light-accent);
}
/* set 1px padding-top so we can have a hover effect by removing it */
.nav-item {
    padding-top:1px;
    margin:1px 2px 4px;
}
.nav-item:hover {
  padding-top:0px;
}
.my-pizza {
    border:var(--dark-shade) solid 2px;
    border-radius:3px
}
.tagline {
    font-size: smaller;
    background-color: #eeeeee;
    border-radius:8px;
}
/* to set background/foreground colours */
.bg-light {
    /* light text and dark background */
    background-color: var(--light-shade);
    color:var(--dark-shade);
}
.bg-dark {
    /* dark text and light background */
    background-color: var(--dark-shade);
    color:var(--light-shade);
}
/* to highlight chees/sauce options */
.ingredients span {
    border: grey solid 1px;
    border-radius: 4px;
    font-size: smaller;
}
.red {
    color: var(--primary);
}
.green {
    color:var(--light-accent);
}
/* allow title and description over top of image */
.card-image {
    position: relative;
}
.card-image-title {
    position: absolute;
    top: -5px;
    left:-5px;
    background-color: var(--light-accent);
    color: white;
    padding:0 5px;
}
.card-image-text {
    position: absolute;
    margin-left:33%;
    bottom:12px;
    right:-5px;
    background-color: rgba(255,255,255,.75);
    padding:0 5px;
    max-height: 75%;  /*Limit size of description box */
    overflow: scroll;  /* for many toppings */
}
/* -- Ids -- */
/* navbar hidden by default. shown on larger screens via media queries */
#navbar {
    display: none;
}
#nav-small {
    display:block;
}
/* fix width on nav items for a more pleasant UI */
#nav-small a {
    width:142px;
}
#topbar-logo {
    position:absolute;
    top:3px;
    left:2px;
}
/* set margin on main header to allow for sticky nav */
#main-header {
    margin-top: 10px;
    position: relative;
    display: inline-block;
}
#main-header h1 {
    font-size:3.5em;
    font-weight:bold;
    text-shadow: var(--light-accent) 2px 2px 4px;
    position: relative;
    margin:0 auto;
}
/* about section hidden by default on small screens
instead a link to the about-us page is shown in the
nav area. Shown on larger screens via media queries */
#about {
    display:none;
    background-color:rgb(119, 166, 11,0.6);
    color:var(--dark-shade);
    position:absolute;
    right:0;
    overflow-y: scroll;
    height:100%;
    font-size:0.8em;
    padding-left: 5px;
}
#opening_times {
    box-shadow:var(--primary) 2px 2px 2px;
    background-color:var(--dark-shade);
    color:var(--light-shade);
    margin: 10px 5px;
}

/* Media Queries */
@media screen and (min-width: 768px) {
    #navbar { display: block;}  /* show navbar at top of screen */
    #nav-small { display: none;}  /* Hide mobile nav area*/
    #about { display: block; }  /* show the about info in the header */
    #main-header h1 {
        font-size:5em;
        position:absolute;
        top:99px;
        left:18px;
    }
    #opening_times {
        box-shadow: var(--dark-shade) 2px 2px 2px;
        background-color: #eeeeee;
        color: var(--dark-shade);
    }
}
@media screen and (min-width: 992px) {
   #main-header h1 {
        font-size:6em;
    }
}
@media screen and (min-width: 1200px) {
    body { font-size:1.2rem; }  /* increase base fontsize */
    #main-header h1 {
        font-size:7em;
        top:18px;
    }
}
@media screen and (min-width: 1400px) {
    body { font-size:1.2rem; }  /* increase base fontsize */
    #about { font-size:0.9em; }
}

